--- a/index.html
+++ b/index.html
@@ -296,7 +296,12 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Developer at Lucky Network (May 2019-2021)</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <ul>
+                <li>Head/Main Developer for Skyblock Gamemode</li>
+                <li>Develop and create Skyblock Gamemode style that becomes a new standard for Skyblock in Indonesia</li>
+                <li>Managed to have 100+ average players on single gamemode</li>
+                <li>Have huge impact on server's growth especially on Skyblock Gamemode</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -309,7 +314,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Freelancer at Senior Team (Jan 2021-present)</div>
-            <p>Over 20 completed commission</p>
+            <ul>
+                <li>13 Completed Commission</li>
+                <li>5/5 Stars Average Rating</li>
+            </ul>
           </div>
         </div>
       </div>
