--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/aglerr-whitebg-512x512.png" alt="Image"/></a></div>
           <div class="h2 title">aglerr</div>
-          <p class="category text-white">Spigot Plugin Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <p class="category text-white">Spigot Plugin Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
         </div>
       </div>
       <div class="section">
@@ -65,7 +65,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Muhammad Daffa and also known as <b>aglerr</b> and I'm 18 years old from Indonesia!</p>
+            <p>Hello! I am Muhammad Daffa also known as <b>aglerr</b> and I'm 18 years old from Indonesia!</p>
             <p>I have 3 years experience of Java and Spigot Plugin Development, and other stuff too such as: Plugin Configuration, Server Setups.
                 My goal is to have fun while creating a masterpiece and contribute as much to the community.
             </p>
@@ -375,12 +375,11 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">140, City Center, New York, U.S.A</p>
-                    <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+1718-111-0011</p>
+                    <p class="mb-0"><strong>Discord</strong></p>
+                    <p class="pb-2">aglerr#9849</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>anthony@company.com</p>
+                    <p>muhammaddaffa.work@gmail.com</p>
+                    <p>I mainly uses Discord, so it is recommended for you to contact me through Discord.</p>
                   </div>
                 </div>
               </div>
