--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
                     <p class="pb-2">aglerr#9849</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>muhammaddaffa.work@gmail.com</p>
+                    <p class="mb-0">Additional Information</p>
                     <p>I mainly uses Discord, so it is recommended for you to contact me through Discord.</p>
                   </div>
                 </div>
