--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                       </div>
                       <div class="row">
                         <div class="col">
-                          <button class="btn btn-primary" type="submit">Send</button>
+                          <button class="btn btn-off">Not Available</button>
                         </div>
                       </div>
                     </form>
