--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
           <div class="button-container">
             <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook">
-              <i class="fa fa-facebook"></i>
+              <img src="images/spigot-favicon.png"/>
             </a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter">
               <i class="fa fa-twitter"></i>
