--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>aglerr's Personal Website</title>
+    <title>aglerr's Portfolio Website</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -202,7 +202,7 @@
             <div class="tab-content gallery mt-5">
               <!-- Player Cosmetics -->
               <div class="tab-pane active" id="playercosmetics">
-                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/player-cosmetics-3d-models-cosmetic-colorable-cosmetic-backpack-and-helmet-cosmetic.95103/" target="_blank">Player Cosmetics</a>></div>
+                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/player-cosmetics-3d-models-cosmetic-colorable-cosmetic-backpack-and-helmet-cosmetic.95103/" target="_blank" style="color: rgb(70, 125, 226)">Player Cosmetics <i class="fas fa-link"></i></a></div>
                 <div class="ml-auto mr-auto">
                   <div class="row port-row">
                     <div class="col-md-6 port-col">
