--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               </div>
               <!-- Item Skins -->
               <div class="tab-pane" id="itemskins">
-                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/itemskins-1-16-1-18-best-plugin-to-make-player-not-feel-bored-of-the-same-item-looks.97459/" target="_blank">Item Skins</a></div>
+                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/itemskins-1-16-1-18-best-plugin-to-make-player-not-feel-bored-of-the-same-item-looks.97459/" target="_blank" style="color: rgb(70, 125, 226)">Item Skins <i class="fas fa-link"></i></a></div>
                 <div class="ml-auto mr-auto">
                   <div class="row port-row">
                     <div class="col-md-6 port-col">
@@ -276,7 +276,7 @@
               </div>
               <!-- Mob Coins -->
               <div class="tab-pane" id="mobcoins">
-                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/mobcoins-1-8-1-18-the-only-mobcoins-plugin-that-youll-ever-need.93470/" target="_blank">Mob Coins</a></div>
+                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/mobcoins-1-8-1-18-the-only-mobcoins-plugin-that-youll-ever-need.93470/" target="_blank" style="color: rgb(70, 125, 226)">Mob Coins <i class="fas fa-link"></i></a></div>
                 <div class="ml-auto mr-auto">
                   <div class="row port-row">
                     <div class="col-md-6 port-col">
@@ -348,7 +348,7 @@
               </div>
               <!-- Donations -->
               <div class="tab-pane" id="donations">
-                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/donations-1-8-1-17-broadcast-a-special-message-whenever-someone-donates.73815/" target="_blank">Donations</a></div>
+                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/donations-1-8-1-17-broadcast-a-special-message-whenever-someone-donates.73815/" target="_blank" style="color: rgb(70, 125, 226)">Donations <i class="fas fa-link"></i></a></div>
                 <div class="ml-auto mr-auto">
                   <div class="row port-row">
                     <div class="col-md-6 port-col">
@@ -410,7 +410,7 @@
               </div>
               <!-- Player Profiles -->
               <div class="tab-pane" id="playerprofiles">
-                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/player-profiles-1-8-1-18-1-custom-model-data-unlimited-guis-highly-customizable.75394/" target="_blank">Player Profiles</a></div>
+                <div class="h4 text-center mb-4 title"><a href="https://www.spigotmc.org/resources/player-profiles-1-8-1-18-1-custom-model-data-unlimited-guis-highly-customizable.75394/" target="_blank" style="color: rgb(70, 125, 226)">Player Profiles <i class="fas fa-link"></i></a></div>
                 <div class="ml-auto mr-auto">
                   <div class="row port-row">
                     <div class="col-md-6 port-col">
@@ -490,7 +490,7 @@
                         <a>
                           <figure class="cc-effect"><img src="images/plugins/random3.gif" alt="Image"/>
                             <figcaption>
-                              <div class="h4">Armor Switcher</div>
+                              <div class="h4">Supply Drop</div>
                               <p>Plugin</p>
                             </figcaption>
                           </figure>
@@ -500,7 +500,7 @@
                         <a>
                           <figure class="cc-effect"><img src="images/plugins/random5.webp" alt="Image"/>
                             <figcaption>
-                              <div class="h4">Supply Drop</div>
+                              <div class="h4">Hypixel's Jump Pads</div>
                               <p>Plugin</p>
                             </figcaption>
                           </figure>
@@ -512,7 +512,7 @@
                         <a>
                           <figure class="cc-effect"><img src="images/plugins/random2.webp" alt="Image"/>
                             <figcaption>
-                              <div class="h4">Spawner Extract</div>
+                              <div class="h4">Armor Switcher</div>
                               <p>Plugin</p>
                             </figcaption>
                           </figure>
@@ -522,7 +522,7 @@
                         <a>
                           <figure class="cc-effect"><img src="images/plugins/random4.gif" alt="Image"/>
                             <figcaption>
-                              <div class="h4">Hypixel's Jump Pads</div>
+                              <div class="h4">Spawner Extract</div>
                               <p>Plugin</p>
                             </figcaption>
                           </figure>
@@ -629,7 +629,7 @@
                               <input type="hidden" name="redirect" value="https://web3forms.com/success">
                               <div class="row">
                                 <div class="col">
-                                  <button class="btn" type="submit">Submit</button>
+                                  <button class="btn" type="submit" style="background-color: rgb(70, 125, 226)">Submit</button>
                                 </div>
                               </div>
                             </form>
