--- a/index.html
+++ b/index.html
@@ -193,8 +193,11 @@
                       <img src="images/plugins/playerprofiles.png" aria-hidden="true"></img></a></li>
                     <!-- Random -->
                     <li class="nav-item">
-                      <a class="nav-link" data-toggle="tab" href="#random" role="tablist">
+                      <a class="nav-link" data-toggle="tab" href="#random1" role="tablist">
                       <img src="images/plugins/random.png" aria-hidden="true"></img></a></li>
+                    <li class="nav-item">
+                      <a class="nav-link" data-toggle="tab" href="#random2" role="tablist">
+                        <img src="images/plugins/random.png" aria-hidden="true"></a></li>
                   </ul>
                 </div>
               </div>
@@ -471,7 +474,7 @@
                 </div>
               </div>
               <!-- Random -->
-              <div class="tab-pane" id="random">
+              <div class="tab-pane" id="random1">
                 <div class="h4 text-center mb-4 title">Random Plugin #1</div>
                 <div class="ml-auto mr-auto">
                   <div class="row port-row">
@@ -533,6 +536,77 @@
                           <figure class="cc-effect"><img src="images/plugins/random6.webp" alt="Image"/>
                             <figcaption>
                               <div class="h4">Hypixel's Watchdog</div>
+                              <p>Plugin</p>
+                            </figcaption>
+                          </figure>
+                        </a>  
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane" id="random2">
+                <div class="h4 text-center mb-4 title">Random Plugin #2</div>
+                <div class="ml-auto mr-auto">
+                  <div class="row port-row">
+                    <div class="col-md-6 port-col">
+                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                        <a>
+                          <figure class="cc-effect"><img src="images/plugins/random2/custom-fishing-rod.mp4" alt="Image"/>
+                            <figcaption>
+                              <div class="h4">Custom Fishing Rod</div>
+                              <p>Plugin</p>
+                            </figcaption>
+                          </figure>
+                        </a>
+                      </div>
+                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                        <a>
+                          <figure class="cc-effect"><img src="images/plugins/random2/prison-pet.mp4" alt="Image"/>
+                            <figcaption>
+                              <div class="h4">Prison Pet</div>
+                              <p>Plugin</p>
+                            </figcaption>
+                          </figure>
+                        </a>  
+                      </div>
+                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                        <a>
+                          <figure class="cc-effect"><img src="images/plugins/random2/top-damage.mp4" alt="Image"/>
+                            <figcaption>
+                              <div class="h4">Top Damage</div>
+                              <p>Plugin</p>
+                            </figcaption>
+                          </figure>
+                        </a>  
+                      </div>
+                    </div>
+                    <div class="col-md-6 port-col">
+                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                        <a>
+                          <figure class="cc-effect"><img src="images/plugins/random2/lock-pick.mp4" alt="Image"/>
+                            <figcaption>
+                              <div class="h4">Pick Lock</div>
+                              <p>Plugin</p>
+                            </figcaption>
+                          </figure>
+                        </a>  
+                      </div>
+                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                        <a>
+                          <figure class="cc-effect"><img src="images/plugins/random2/chat-markdown.mp4" alt="Image"/>
+                            <figcaption>
+                              <div class="h4">Chat Markdown</div>
+                              <p>Plugin</p>
+                            </figcaption>
+                          </figure>
+                        </a>  
+                      </div>
+                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                        <a>
+                          <figure class="cc-effect"><img src="https://www.youtube.com/watch?v=MnuLq4nTe_k" alt="Image"/>
+                            <figcaption>
+                              <div class="h4">Boss Raid</div>
                               <p>Plugin</p>
                             </figcaption>
                           </figure>
