--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                     <div class="col-md-6 port-col">
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <a>
-                          <figure class="cc-effect"><img src="images/plugins/random2/custom-fishing-rod.mp4" alt="Image"/>
+                          <figure class="cc-effect"><img src="images/plugins/random2/custom-fishing-rod.gif" alt="Image"/>
                             <figcaption>
                               <div class="h4">Custom Fishing Rod</div>
                               <p>Plugin</p>
@@ -562,7 +562,7 @@
                       </div>
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <a>
-                          <figure class="cc-effect"><img src="images/plugins/random2/prison-pet.mp4" alt="Image"/>
+                          <figure class="cc-effect"><img src="images/plugins/random2/prison-pet.gif" alt="Image"/>
                             <figcaption>
                               <div class="h4">Prison Pet</div>
                               <p>Plugin</p>
@@ -572,7 +572,7 @@
                       </div>
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <a>
-                          <figure class="cc-effect"><img src="images/plugins/random2/top-damage.mp4" alt="Image"/>
+                          <figure class="cc-effect"><img src="images/plugins/random2/top-damage.gif" alt="Image"/>
                             <figcaption>
                               <div class="h4">Top Damage</div>
                               <p>Plugin</p>
@@ -584,7 +584,7 @@
                     <div class="col-md-6 port-col">
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <a>
-                          <figure class="cc-effect"><img src="images/plugins/random2/lock-pick.mp4" alt="Image"/>
+                          <figure class="cc-effect"><img src="images/plugins/random2/lock-pick.gif" alt="Image"/>
                             <figcaption>
                               <div class="h4">Pick Lock</div>
                               <p>Plugin</p>
@@ -594,20 +594,10 @@
                       </div>
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <a>
-                          <figure class="cc-effect"><img src="images/plugins/random2/chat-markdown.mp4" alt="Image"/>
-                            <figcaption>
-                              <div class="h4">Chat Markdown</div>
-                              <p>Plugin</p>
-                            </figcaption>
-                          </figure>
-                        </a>  
-                      </div>
-                      <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                        <a>
-                          <figure class="cc-effect"><img src="https://www.youtube.com/watch?v=MnuLq4nTe_k" alt="Image"/>
+                          <figure class="cc-effect"><a href="https://www.youtube.com/watch?v=MnuLq4nTe_k" target="_blank"><img src="images/plugins/random2/boss-raid.gif" alt="Image"/></a>
                             <figcaption>
                               <div class="h4">Boss Raid</div>
-                              <p>Plugin</p>
+                              <p>Click for full preview</p>
                             </figcaption>
                           </figure>
                         </a>  
