--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
                         </a>  
                       </div>
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                        <a>
-                          <figure class="cc-effect"><a href="https://www.youtube.com/watch?v=MnuLq4nTe_k" target="_blank"><img src="images/plugins/random2/boss-raid.gif" alt="Image"/></a>
+                        <a href="https://www.youtube.com/watch?v=MnuLq4nTe_k" target="_blank">
+                          <figure class="cc-effect"><img src="images/plugins/random2/boss-raid.gif" alt="Image"/>
                             <figcaption>
                               <div class="h4">Boss Raid</div>
                               <p>Click for full preview</p>
